--- a/CibDemo/index.html
+++ b/CibDemo/index.html
@@ -10,10 +10,10 @@
     </style>
 </head>
 <body>
-    <h1>Calculadora de PI</h1>
+    <h1>Calculadora de numero magico PI</h1>
 
     <form>
-        <label for="iteraciones">Iteraciones:</label>
+        <label for="iteraciones">Cantidad de decimales:</label>
         <input type="text" id="iteraciones" />
         <input type="submit" value="Calcular" />
     </form>
